traversal.snake.Snake.scala.error
Compilation error:
Snake:5: error: reassignment to val
  var res=Boolean=true
                 ^Snake:22: warning: enclosing method positionFinale has result type Unit: return value discarded
  return res
  ^